Java version to 11, removed Optional in API, removed method getObjecttypeByName()